<?xml version="1.0" encoding="utf-8"?>

<!-- Erregistratzeko layout-a -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/nude_larrosa">

    <!-- Aplikazioaren logoa -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_desk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoenpresa" />

    <!-- Izenaren TextField -->
    <EditText
        android:id="@+id/erregIzenaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/izena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!-- Korreoa idazteko eremua -->
    <EditText
        android:id="@+id/erregEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erregIzenaText" />

    <!-- Psahitza idazteko eremua -->
    <EditText
        android:id="@+id/erregPassText"
        android:hint="@string/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erregEmailText" />

    <!-- RadiioButton-en taldea dekalratu barruan bere aukerekin -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="355dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erregPassText">

        <RadioButton
            android:id="@+id/radioEmakumea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/emakumea" />

        <RadioButton
            android:id="@+id/radioGizona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gizona" />

        <RadioButton
            android:id="@+id/radioBesteBat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bestea" />
    </RadioGroup>

    <!-- Hiriaren Spinnerra -->
    <Spinner
        android:id="@+id/spinnerHiria"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <!-- Erregistratzeko botoia -->
    <Button
        android:id="@+id/erregBotoia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/beltza"
        android:text="@string/erregistratu"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHiria" />

    <!-- Login-eran bueltatzeko botoia -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/beltza"
        android:text="@string/bueltatuLogin"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erregBotoia" />

    <!-- Sare sozialen botiak deklaratu -->
    <ImageButton
        android:id="@+id/googleBotoia"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_social"
        android:contentDescription="@string/google_desk"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/facebookBotoia"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erregBotoia"
        app:layout_constraintVertical_bias="0.791"
        app:srcCompat="@drawable/logo_google" />

    <ImageButton
        android:id="@+id/facebookBotoia"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_social"
        android:contentDescription="@string/facebook_desk"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erregBotoia"
        app:layout_constraintVertical_bias="0.791"
        app:srcCompat="@drawable/logo_facebook_negro" />

    <ImageButton
        android:id="@+id/twitterBotoia"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_social"
        android:contentDescription="@string/twitter_desk"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/facebookBotoia"
        app:layout_constraintTop_toBottomOf="@+id/erregBotoia"
        app:layout_constraintVertical_bias="0.791"
        app:srcCompat="@drawable/logoxnegro" />

</androidx.constraintlayout.widget.ConstraintLayout>