<?xml version="1.0" encoding="utf-8"?>

<!-- Login layout-a -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/nude_larrosa">

    <!-- Aplikazioaren logoa -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoenpresa" />

    <!-- Erabiltzailearen korreoa idazteko eremua -->
    <EditText
        android:id="@+id/loginInputEmail"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!-- Pasahitza idazteko eremua -->
    <EditText
        android:id="@+id/loginInputPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInputEmail" />

    <!-- Logeatzeko botoia -->
    <Button
        android:id="@+id/loginBotoia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/beltza"
        android:text="@string/Logeatu"
        android:textColor="@color/gris_argia"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInputPass" />

    <!-- Erregistratzeko pantailara joateko botoia -->
    <Button
        android:id="@+id/erregBotoia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded_border"
        android:text="@string/erregistratu"
        android:textColor="@color/beltza"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBotoia" />

    <!-- Sare sozialen botoiak -->
    <ImageButton
        android:id="@+id/twitterBotoia"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="Facebookera joateko erabili ahal da"
        android:hint="facebook botoi zuria"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/facebookBotoia"
        app:layout_constraintTop_toBottomOf="@+id/erregBotoia"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logoxnegro"
        android:background="@drawable/button_social"/>

    <ImageButton
        android:id="@+id/facebookBotoia"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:contentDescription="Facebookera joateko erabili ahal da"
        android:hint="facebook botoi zuria"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erregBotoia"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_facebook_negro"
        android:background="@drawable/button_social"/>

    <ImageButton
        android:id="@+id/googleBotoia"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="Facebookera joateko erabili ahal da"
        android:hint="facebook botoi zuria"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/facebookBotoia"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erregBotoia"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_google"
        android:background="@drawable/button_social"/>

</androidx.constraintlayout.widget.ConstraintLayout>